GUI and image feedback Pretty cool actually!!

--- a/ImageMosaic.GUI/App.config
+++ b/ImageMosaic.GUI/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <connectionStrings>
+    <add name="ImageMosaic" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3306;database=imagemosaic;uid=root;password=Youshallnotpass23" />
+  </connectionStrings>
 </configuration>
